--- a/componentes/componente-ejercicio1/componente-ejercicio1.html
+++ b/componentes/componente-ejercicio1/componente-ejercicio1.html
@@ -7,7 +7,7 @@
         <div class="col-9">
             <p><strong>Asignatura que imparte:</strong> {{profesor.clase}}</p>
             <p><strong>Edad:</strong> {{profesor.edad}} años</p>
-            <p><strong>Biografia:</strong> {{profesor.clase}}</p>
+            <p><strong>Biografia:</strong> {{profesor.bio}}</p>
         </div>
     </div>
 </div>
